src/test/ui/error-codes/E0426.stderr
error[E0426]: use of undeclared label `'a`
  --> $DIR/E0426.rs:13:15
   |
LL |         break 'a;
   |               ^^ undeclared label `'a`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0426"
